--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
             color: #b8c5d6;
             opacity: 0.9;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            margin-bottom: 10px;
+        }
+
+        .header .powered-by {
+            font-size: 1em;
+            color: #00d4ff;
+            opacity: 0.8;
+            text-shadow: 0 0 10px rgba(0, 212, 255, 0.5);
+            font-weight: bold;
         }
 
         .controls {
@@ -478,7 +487,8 @@
     <div class="container">
         <div class="header">
             <h1>🖼️ 街头篮球7月31日更新文件图片集</h1>
-            <div class="subtitle">探索最新更新的游戏资源，体验高清图片展示</div>
+            <div class="subtitle">老非制作</div>
+            <div class="powered-by">powered by 老非</div>
         </div>
 
         <div class="controls">
